Crawl/graph fixes + vector-store consistency (session checkpoint)
Extraction parser fix (LLM output was silently discarded via tool-call prefix; relations 0->48k). Sparse adjacency lists replace dense N×N matrices (RAM 77->15GB, VRAM 8.7->1GB). All graph reads/writes routed through the vector store / KnowledgeGraphService (entity+tables browsers, stats, visualization, search, enrichment, cross-doc). Durable crawl logs + archived-entry merge in /logs. Per-step click-to-expand reads durable logs in both crawl views. opencode/DeepSeek configurable extraction; index-browser (@slideIn/cross-index/staging-503), transcript, and history-list fixes. Includes accumulated prior-session work.